--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main class="container text-2xl font-bold p-15 flex">
+      <%= yield %>
+    </main>
   </body>
 </html>
